Coded multivariate normal stochastic distribution.

--- a/harp.ipynb
+++ b/harp.ipynb
@@ -11,24 +11,26 @@
   },
   {
    "cell_type": "markdown",
-   "id": "edc6eaa6",
+   "id": "3fbb38b5",
    "metadata": {},
    "source": [
-    "Some description here."
+    "This package is a laboratory for exploring the sensitivity of retirement financial decisions. It is not a planning tool, but more an environment to explore *what if* scenarios.\n",
+    "\n",
+    "Diclaimer: *You make your own decisions and I am not a financial planner. Use at your own risks.*"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "a0fc25b6",
+   "id": "4f1fd7ca",
    "metadata": {},
    "source": [
-    "## Just some Python module bookkeeping"
+    "### Just some Python module bookkeeping"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0528b077",
+   "id": "7744b67b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,13 +46,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f24324bd",
+   "id": "d2d87b7e",
    "metadata": {},
    "source": [
     "## Initialize our plan\n",
-    "Plan must start with year of birth of each of the spouse and their expected lifespan.\n",
+    "Plan must start with providing the year of birth of each of the spouse(s) and their expected lifespan(s).\n",
     "\n",
-    "There are plenty of predictors on the web. Pick your favorite:\n",
+    "There are plenty of longivity predictors on the web. Pick your favorite:\n",
     "\n",
     "https://www.livingto100.com/calculator\n",
     "\n",
@@ -58,13 +60,13 @@
     "\n",
     "or just Google life expectancy calculator.\n",
     "\n",
-    "There are two values needed for couples. Single individuals just enter one value in each list [ ]. For couples, keep the same order when entering data. Here Jack was born in 1961 and Jill in 1964. Jack hopes to live to 89 yo, while Jill thinks she might reach age 92."
+    "There are two values needed for couples. Single individuals just enter one value in each list [ ]. For couples, keep the same order in the pair of values when entering the data. Here Jack was born in 1961 and Jill in 1964. Jack hopes to live to 89 years old, while Jill thinks she might reach age 92."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0256b333",
+   "id": "760e4a8e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +75,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "164bded1",
+   "id": "ab0c6667",
    "metadata": {},
    "source": [
     "## Specify account balances and spousal beneficiaries\n",
@@ -82,15 +84,15 @@
     "- Tax-deferred accounts, including all IRAs, 401k, 403b, etc.\n",
     "- Tax-free accounts, including Roth IRAs and Roth 401k\n",
     "\n",
-    "There are two values for each type of account, one for each spouse following the same order as before.\n",
+    "For spouses, there are two values for each type of account, one for each spouse following the same order as before. For single individuals, only one value needs to be entered between each [ ].\n",
     "\n",
-    "The beneficiary values specifies the fraction of total of assets left to the other spouse at death."
+    "The beneficiary values specify the fraction of total of assets left to the other spouse at death. For example, a spouse leaving 3/4 of her fortune to her three children and the other part to her partner would have a beneficiary value of 0.25."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7ac7b063",
+   "id": "aa9b0109",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,47 +104,50 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4277b106",
+   "id": "6ea1d7ff",
    "metadata": {},
    "source": [
-    "## What is the current and desired future asset allocations?\n",
+    "## What are current and future asset allocations?\n",
     "Each account can invest in 3 major asset classes:\n",
     "- Equities that can be represented by the S&P500 index\n",
-    "- Corporate bonds (AA) representing bond assets\n",
-    "- Fixed securities represented by the 10-year treasury bond\n",
+    "- Corporate bonds (Baa) representing bond assets\n",
+    "- Fixed securities represented by 10-year treasury bonds\n",
     "\n",
     "The total of percentages in each class of asset for each account must add to 100%.\n",
     "\n",
     "You are asked to provide an asset distribution for today, and one for the end of your life.\n",
     "Values in between will be interpolated using a linear operator (for now). This can be useful\n",
-    "if you want to shift asset allocation as you age."
+    "if you want to shift asset allocation as you age.\n",
+    "\n",
+    "In the example below, allocation starts in full stock equities in the tax-free account,\n",
+    "gradually transitioning to a traditional 60/40 portfolio towards the end of life. "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fab9cc25",
+   "id": "ac78169f",
    "metadata": {},
    "outputs": [],
    "source": [
     "plan.setInitialAR(taxableAR=[[0, 50, 50], [0, 50, 50]],\n",
     "                  taxDeferredAR=[[60, 40, 0], [60, 40, 0]],\n",
-    "                  taxFreeAR=[[80, 20, 0], [80, 20, 0]])\n",
+    "                  taxFreeAR=[[100, 0, 0], [100, 0, 0]])\n",
     "\n",
     "plan.setFinalAR(taxableAR=[[0, 50, 50], [0, 50, 50]],\n",
     "                taxDeferredAR=[[60, 40, 0], [60, 40, 0]],\n",
-    "                taxFreeAR=[[80, 20, 0], [80, 20, 0]])\n",
+    "                taxFreeAR=[[60, 40, 0], [60, 40, 0]])\n",
     "\n",
     "plan.interpolateAR('linear')"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "dc5f236f",
+   "id": "1bcc4ca4",
    "metadata": {},
    "source": [
     "## Specify rates of return and inflation rate\n",
-    "We can specify the rate of returns for each class of assets, and inflation.\n",
+    "Rates of return can be specified for each class of assets, and inflation.\n",
     "Valid entries are 'historical', 'stochastic', or a list of average values.\n",
     "\n",
     "For historical and stochastic data, data from 1928 to today is available for experimenting.\n",
@@ -158,35 +163,39 @@
     "    \n",
     "This example would use a fixed average rates of 9.6%, 4% and 3% average return on S&P500, bonds, and fixed assets, respectively, with an average inflation rate of 3.8%.\n",
     "\n",
-    "Note that the S&P500 rates used always include dividends."
+    "Historical data can also be used. Worst case scenario is a retirement starting in 1969. It would be simulated as follows:\n",
+    "\n",
+    "    plan.setRates('historical', 1969, 2022)\n",
+    "\n",
+    "Note that the S&P500 rates provided always include dividends."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fc3d5a8c",
+   "id": "b53ff01e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# plan.setRates('historical', 1978, 2022)\n",
+    "# plan.setRates('historical', 1969, 2022)\n",
     "plan.setRates([8, 4, 4, 3])"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "3d566b75",
+   "id": "3ceb602b",
    "metadata": {},
    "source": [
     "## What is your desired net income at retirement?\n",
     "For determining this value, retirement planners will strongly suggest that you've must have done a cashflow analysis on your yearly spending. After this exercise, you should have a good idea of how much you'll need in retirement.\n",
     "\n",
-    "The desired income here is the net income (i.e., after paying taxes) that you would like to have starting at your retirement age. This income is adjusted for inflation and can follow an additional adjustment called a *smile* profile. A *smile* profile accounts for the fact that your spending capacity will modulate during retirement as you go from the so-called gogo years to the no-go years. A *flat* profile, on the other hand, will keep the same value, which will be only inflation-adjusted."
+    "The desired income here is the net income (i.e., after paying taxes) that you would like to have starting at your retirement age. This income is adjusted for inflation and can follow an additional adjustment called a *smile* profile. A *smile* profile accounts for the fact that your spending capacity will modulate during retirement as you go from the so-called gogo years to the no-go years. A *flat* profile, on the other hand, will keep the same value, which will only be inflation-adjusted."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c6563e1f",
+   "id": "67a8087a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -196,11 +205,11 @@
   },
   {
    "cell_type": "markdown",
-   "id": "179b0ff6",
+   "id": "8dbdb068",
    "metadata": {},
    "source": [
     "## You must have some fixed income?\n",
-    "Pension and social security are fixed income. Model here assumes that pension is not inflation adjusted while social security benefits are. Entries are the predicted amount for each spouse and the age for the commencement of benefits.\n",
+    "Pension and social security are fixed income. Model here assumes that pension is not inflation adjusted while social security benefits are. Entries are the predicted amount for each spouse and the age of the commencement of benefits.\n",
     "\n",
     "If you have no pension, just use zeros (0) as entries, as in\n",
     "\n",
@@ -212,7 +221,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dc7937ae",
+   "id": "8c6e5ac9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -223,11 +232,11 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2798496d",
+   "id": "4ef3e5a4",
    "metadata": {},
    "source": [
     "## Provide work income, contributions, Roth conversions, and other items by year\n",
-    "In order to run the plan, you must provide a worksheet with one spreadsheet (TAB) per spouse with the following information:\n",
+    "In order to get a plan, you must provide a worksheet with one spreadsheet (TAB) per spouse with the following information:\n",
     "\n",
     "|year|anticipated income|ctrb taxable | ctrb 401k | ctrb Roth 401k | ctrb IRA | ctrb Roth IRA | Roth X | big ticket items|\n",
     "|--|--|--|--|--|--|--|--|--|\n",
@@ -236,21 +245,21 @@
     "| ... | | | | | | | | |\n",
     "|20XX | | | | | | | | |\n",
     "\n",
-    "Here, 20XX is the first year after both spouses have passed. For the columns, *Anticipated income* is the annual amount (gross) that you anticipate to receive from employement or other sources (not including dividends from your taxable investment account). Note that column names are case sensitive and every entry must be in lower case.\n",
+    "Here, 20XX is the first year after both spouses have passed. For the columns, *Anticipated income* is the annual amount (gross) that you anticipate to receive from employement or other sources (not including dividends from your taxable investment account). Note that column names are case sensitive and all of these entries must be in lower case.\n",
     "\n",
-    "Contributions to your savings accounts are marked as *ctrb*. Contributions to your 401k must also include your employer's contributions. Being in excel, you can use the calculator to enter percentage of your anticipated income.\n",
+    "Contributions to your savings accounts are marked as *ctrb*. Contributions to your 401k must also include your employer's contributions. Being in excel, you can use the calculator to enter percentage of your anticipated income if that is easier for you.\n",
     "\n",
-    "Roth conversion are specified in the column marked *Roth X*. Finally, *big ticket items* are the sale or purchase of a house, or any other major expense or money that you would receive (e.g., inheritance, or large gifts to or from you).\n",
+    "Roth conversion are specified in the column marked *Roth X*. Finally, *big ticket items* are the sale or purchase of a house, or any other major expense or money that you would give or receive (e.g., inheritance, or large gifts to or from you). Therefore, the sign (+/-) of entries in this column is important. All other column entries should be positive.\n",
     "\n",
-    "The TAB name for each spreadsheet represents the name of the spouse for reporting transactions resulting from the plan. So for Jack and Jill, this worksheet file would have two tabs, the first one marked *Jack* and the second one marked *Jill*, following the same order of data as before.\n",
+    "The TAB name for each spreadsheet represents the name of the spouse for reporting transactions affecting your plan. So for Jack and Jill, this worksheet file would have two tabs, the first one named *Jack* and the second one named *Jill*, following the same order of data provided before.\n",
     "\n",
-    "An example is provided in the file *timeHorizon.xlsx*. Files from LibreOffice can also be read."
+    "An example is provided in the file *timeHorizon.xlsx*. Files format from the LibreOffice software can also be read."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ca86c1fb",
+   "id": "7748bcf1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -259,17 +268,19 @@
   },
   {
    "cell_type": "markdown",
-   "id": "de858c40",
+   "id": "b99b6d05",
    "metadata": {},
    "source": [
     "## How do you want to withdraw from you and your spouse's accounts?\n",
-    "By specifying an *auto* spousal split, the withdrawals from the retirement accounts will be made proportial to their respective values. It can also be specified as a value (e.g., 0.65) in which case 0.65 will be taken from the first account and the other 35% taken from the other (second entry) spouse."
+    "By specifying an *auto* spousal split, the withdrawals from the retirement accounts will be made proportial to their respective balances. It can also be specified as a fractional value (e.g., 0.65) in which case 0.65 will be taken from the first account and the other 35% taken from the other (second entry) spouse.\n",
+    "\n",
+    "All withdrawals use a smart banking approach which favors depleting taxable accounts before tax-deferred, before tax-free. With *auto*, additional checks and bounds are used to coordinate the accounts."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a88a3365",
+   "id": "ec9f7c76",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -278,11 +289,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d2eb3097",
+   "id": "c1c97249",
    "metadata": {},
    "source": [
     "## Run calculations\n",
-    "This is where everythng gets calculated for the time horizon set by the life expectancy of individual(s)."
+    "We're ready!\n",
+    "\n",
+    "This call runs the calculations for the time horizon set by the life expectancy of individual(s)."
    ]
   },
   {
@@ -297,7 +310,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a45d4a57",
+   "id": "0bfe0dbd",
    "metadata": {},
    "source": [
     "## Show net income compared to target over the years"
@@ -306,7 +319,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "971bd628",
+   "id": "b6dffb3f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -315,7 +328,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "af1445bc",
+   "id": "460f5547",
    "metadata": {},
    "source": [
     "## Show sources of income over the years"
@@ -324,7 +337,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e0f71faf",
+   "id": "f74ec825",
    "metadata": {
     "scrolled": false
    },
@@ -335,7 +348,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b9191a01",
+   "id": "8d997ff3",
    "metadata": {},
    "source": [
     "## Show account balances at the beginning of the year"
@@ -344,7 +357,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f330fef9",
+   "id": "6b9a9e62",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -353,7 +366,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9a970168",
+   "id": "1fad7e21",
    "metadata": {},
    "source": [
     "## Show annual taxes paid over the years"
@@ -371,7 +384,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7d076968",
+   "id": "8123cbc2",
    "metadata": {},
    "source": [
     "## Show taxable annual income and anticipated tax brackets"
@@ -380,7 +393,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2ccb652d",
+   "id": "2e305502",
    "metadata": {
     "scrolled": true
    },
@@ -391,7 +404,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3feb5f50",
+   "id": "2785e1c5",
    "metadata": {},
    "source": [
     "## Show annual rates used for calculations"
@@ -400,7 +413,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a44f7f73",
+   "id": "81cec974",
    "metadata": {
     "scrolled": true
    },
@@ -411,7 +424,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "708fcb8c",
+   "id": "96d1dd05",
    "metadata": {},
    "source": [
     "## Do we save this plan?"
@@ -420,7 +433,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "09ada819",
+   "id": "7e25fdb7",
    "metadata": {},
    "outputs": [],
    "source": [
