Fixed typo for IPython

--- a/harp.ipynb
+++ b/harp.ipynb
@@ -177,8 +177,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# plan.setRates('historical', 1969, 2022)\n",
-    "plan.setRates([8, 4, 4, 3])"
+    "plan.setRates('historical', 1969, 2022)\n",
+    "# plan.setRates([8, 4, 4, 3])"
    ]
   },
   {
@@ -200,7 +200,7 @@
    "outputs": [],
    "source": [
     "# Enter desired value for net income, and spending profile.\n",
-    "plan.setDesiredIncome(90000, 'smile')"
+    "plan.setDesiredIncome(75000, 'smile')"
    ]
   },
   {
@@ -351,7 +351,7 @@
    "id": "8d997ff3",
    "metadata": {},
    "source": [
-    "## Show account balances at the beginning of the year"
+    "## Show account balances at the beginning of each year"
    ]
   },
   {
