Added inflation securities and checks on AR inputs.

--- a/harp.ipynb
+++ b/harp.ipynb
@@ -108,10 +108,11 @@
    "metadata": {},
    "source": [
     "## What are current and future asset allocations?\n",
-    "Each account can invest in 3 major asset classes:\n",
-    "- Equities that can be represented by the S&P500 index\n",
-    "- Corporate bonds (Baa) representing bond assets\n",
-    "- Fixed securities represented by 10-year treasury bonds\n",
+    "Each account can invest in 4 major asset classes:\n",
+    "- Equity funds tracking the S&P500 index\n",
+    "- Bond assets tracking the Corporate bonds (Baa) index\n",
+    "- Fixed-income securities represented by 10-year Treasury bonds\n",
+    "- Inflation-indexed securities tracking urban Consumer Price Index\n",
     "\n",
     "The total of percentages in each class of asset for each account must add to 100%.\n",
     "\n",
@@ -130,13 +131,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plan.setInitialAR(taxableAR=[[0, 50, 50], [0, 50, 50]],\n",
-    "                  taxDeferredAR=[[60, 40, 0], [60, 40, 0]],\n",
-    "                  taxFreeAR=[[100, 0, 0], [100, 0, 0]])\n",
+    "plan.setInitialAR(taxableAR=[[0, 25, 50, 25], [0, 25, 50, 25]],\n",
+    "                  taxDeferredAR=[[60, 40, 0, 0], [60, 40, 0, 0]],\n",
+    "                  taxFreeAR=[[100, 0, 0, 0], [100, 0, 0, 0]])\n",
     "\n",
-    "plan.setFinalAR(taxableAR=[[0, 50, 50], [0, 50, 50]],\n",
-    "                taxDeferredAR=[[60, 40, 0], [60, 40, 0]],\n",
-    "                taxFreeAR=[[60, 40, 0], [60, 40, 0]])\n",
+    "plan.setFinalAR(taxableAR=[[0, 25, 50, 25], [0, 25, 50, 0]],\n",
+    "                taxDeferredAR=[[60, 40, 0, 0], [60, 40, 0, 0]],\n",
+    "                taxFreeAR=[[60, 40, 0, 0], [60, 40, 0, 0]])\n",
     "\n",
     "plan.interpolateAR('linear')"
    ]
@@ -306,6 +307,14 @@
    "outputs": [],
    "source": [
     "plan.run();"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5c0b00f1",
+   "metadata": {},
+   "source": [
+    "# Analysis"
    ]
   },
   {
