Few updates on working and capabilities.

--- a/harp.ipynb
+++ b/harp.ipynb
@@ -86,7 +86,9 @@
     "\n",
     "For spouses, there are two values for each type of account, one for each spouse following the same order as before. For single individuals, only one value needs to be entered between each [ ].\n",
     "\n",
-    "The beneficiary values specify the fraction of total of assets left to the other spouse at death. For example, a spouse leaving 3/4 of her fortune to her three children and the other part to her partner would have a beneficiary value of 0.25."
+    "The beneficiary values specify the fraction of total of assets left to the other spouse at death. For example, a spouse leaving 3/4 of her fortune to her three children and the other part to her partner would have a beneficiary value of 0.25.\n",
+    "\n",
+    "Jack and Jill leave everything to each other as account beneficiaries ([1, 1]). Jack has \\\\$90k in his taxable account, \\\\$500k in his 401k, and \\\\$80 in his Roth 401k and Roth IRAs. Jill has \\\\$40k in her bank account, \\\\$150k in a 403b, and \\\\$25k in Roth IRAs in which she contributed over the years."
    ]
   },
   {
@@ -112,7 +114,7 @@
     "- Equity funds tracking the S&P500 index\n",
     "- Bond assets tracking the Corporate bonds (Baa) index\n",
     "- Fixed-income securities represented by 10-year Treasury bonds\n",
-    "- Inflation-indexed securities tracking urban Consumer Price Index\n",
+    "- Inflation-indexed securities tracking urban Consumer Price Index (common assets)\n",
     "\n",
     "The total of percentages in each class of asset for each account must add to 100%.\n",
     "\n",
@@ -152,21 +154,25 @@
     "Valid entries are 'historical', 'stochastic', or a list of average values.\n",
     "\n",
     "For historical and stochastic data, data from 1928 to today is available for experimenting.\n",
-    "Ranges chosen smaller that the life horizon will have rates repeated in cycle. For example,\n",
-    "choosing 1994 to 1996 will repeat these three values over the timespan of the plan.\n",
+    "Ranges chosen smaller that the life horizon will have rate values repeated in cycle. For example,\n",
+    "choosing historical data from 1994 to 1996 will repeat these three values over the timespan of the plan.\n",
     "\n",
-    "Choosing a range of 1970 to 2022, will use the rates of 1970 for this year and 1971 for next, etc.\n",
+    "Choosing a historical range of 1970 to 2022, will use the rates of 1970 for this year and 1971 for next, etc. Worst-case scenario is a retirement starting in 1969. It can be simulated as follows:\n",
     "\n",
+    "    plan.setRates('historical', 1969, 2022)\n",
+    "    \n",
+    "Stochastic data on the other hand computes the multivariate distributions for the 4 rates in a range selected. For example,\n",
+    "\n",
+    "    plan.setRates('stochastic', 1945, 2022)\n",
+    "    \n",
+    "will analyze the data from 1945 to 2022 and compute means and covariance to generate statistically similar results. The stochastic rates generated for the timespan can be plotted as we will see below.\n",
+    "    \n",
     "One can also use fixed rates by providing a list of 4 entries as follows:\n",
     "\n",
     "    myrates = [9.6, 4.0, 3.0, 3.8]\n",
     "    plan.setRates(myrates)\n",
     "    \n",
-    "This example would use a fixed average rates of 9.6%, 4% and 3% average return on S&P500, bonds, and fixed assets, respectively, with an average inflation rate of 3.8%.\n",
-    "\n",
-    "Historical data can also be used. Worst case scenario is a retirement starting in 1969. It would be simulated as follows:\n",
-    "\n",
-    "    plan.setRates('historical', 1969, 2022)\n",
+    "This example would use a fixed average rates of 9.6%, 4% and 3% average return on S&P500, corporate bonds, Treasury bonds, and common assets, respectively, with an average inflation rate of 3.8%. Common assets are investments tracking inflation only.\n",
     "\n",
     "Note that the S&P500 rates provided always include dividends."
    ]
@@ -190,7 +196,9 @@
     "## What is your desired net income at retirement?\n",
     "For determining this value, retirement planners will strongly suggest that you've must have done a cashflow analysis on your yearly spending. After this exercise, you should have a good idea of how much you'll need in retirement.\n",
     "\n",
-    "The desired income here is the net income (i.e., after paying taxes) that you would like to have starting at your retirement age. This income is adjusted for inflation and can follow an additional adjustment called a *smile* profile. A *smile* profile accounts for the fact that your spending capacity will modulate during retirement as you go from the so-called gogo years to the no-go years. A *flat* profile, on the other hand, will keep the same value, which will only be inflation-adjusted."
+    "The desired income here is the net income (i.e., after paying taxes) that you would like to have starting at your retirement age. This income is adjusted for inflation and can follow an additional adjustment called a *smile* profile. A *smile* profile accounts for the fact that your spending capacity will modulate during retirement as you go from the so-called gogo years to the no-go years. A *flat* profile, on the other hand, will keep the same value, which will only be inflation-adjusted.\n",
+    "\n",
+    "The target and actual net income values achieved by the plan can be plotted as will see below."
    ]
   },
   {
@@ -209,14 +217,16 @@
    "id": "8dbdb068",
    "metadata": {},
    "source": [
-    "## You must have some fixed income?\n",
-    "Pension and social security are fixed income. Model here assumes that pension is not inflation adjusted while social security benefits are. Entries are the predicted amount for each spouse and the age of the commencement of benefits.\n",
+    "## You must also have some fixed income?\n",
+    "Pension and social security are fixed income. Model here assumes that pension is not inflation adjusted while social security benefits are (but code can easily be modified to account for inflation-adjusted pensions). Entries are the predicted amount for each spouse and the age of the commencement of benefits.\n",
     "\n",
     "If you have no pension, just use zeros (0) as entries, as in\n",
     "\n",
     "    plan.setPension([0, 0], [65, 65])\n",
     "    \n",
-    "For social security, you must provide the predicted amount(s) and the age(s) at which you start receiving benefits. There are plenty of social security benefit estimators on the web, including the info you can get from your own account at the Social Security Administration (ssa.gov)."
+    "For social security, you must provide the predicted amount(s) and the age(s) at which you start receiving benefits. There are plenty of social security benefit estimators on the web, including the info you can get directly from your own account at the Social Security Administration (ssa.gov).\n",
+    "\n",
+    "Here Jill has an unindexed pension of \\\\$10k per year. Both Jack and Jill decided to take their social security benefits at age 70. The amount provided are estimation of the amounts they would receive at age 70. "
    ]
   },
   {
@@ -237,7 +247,7 @@
    "metadata": {},
    "source": [
     "## Provide work income, contributions, Roth conversions, and other items by year\n",
-    "In order to get a plan, you must provide a worksheet with one spreadsheet (TAB) per spouse with the following information:\n",
+    "In order to get a plan, you must provide an Excel workbook with one spreadsheet (tab) per spouse with the following information:\n",
     "\n",
     "|year|anticipated income|ctrb taxable | ctrb 401k | ctrb Roth 401k | ctrb IRA | ctrb Roth IRA | Roth X | big ticket items|\n",
     "|--|--|--|--|--|--|--|--|--|\n",
@@ -246,15 +256,16 @@
     "| ... | | | | | | | | |\n",
     "|20XX | | | | | | | | |\n",
     "\n",
-    "Here, 20XX is the first year after both spouses have passed. For the columns, *Anticipated income* is the annual amount (gross) that you anticipate to receive from employement or other sources (not including dividends from your taxable investment account). Note that column names are case sensitive and all of these entries must be in lower case.\n",
+    "Here, 20XX is the first year after both spouses have passed. For the columns, *anticipated income* is the annual amount (gross) that you anticipate to receive from employement or other sources (not including dividends from your taxable investment account). Note that column names are case sensitive and all of these entries must be in lower case.\n",
     "\n",
-    "Contributions to your savings accounts are marked as *ctrb*. Contributions to your 401k must also include your employer's contributions. Being in excel, you can use the calculator to enter percentage of your anticipated income if that is easier for you.\n",
+    "Contributions to your savings accounts are marked as *ctrb*. Contributions to your 401k must also include your employer's contributions. Being in excel, you can use the calculator to enter percentage of your anticipated income if that is easier for you. \n",
+    "Files format from the LibreOffice software can also be read.\n",
     "\n",
     "Roth conversion are specified in the column marked *Roth X*. Finally, *big ticket items* are the sale or purchase of a house, or any other major expense or money that you would give or receive (e.g., inheritance, or large gifts to or from you). Therefore, the sign (+/-) of entries in this column is important. All other column entries should be positive.\n",
     "\n",
     "The TAB name for each spreadsheet represents the name of the spouse for reporting transactions affecting your plan. So for Jack and Jill, this worksheet file would have two tabs, the first one named *Jack* and the second one named *Jill*, following the same order of data provided before.\n",
     "\n",
-    "An example is provided in the file *timeHorizon.xlsx*. Files format from the LibreOffice software can also be read."
+    "An Jack and Jill provided their information in the file *timeHorizon.xlsx*."
    ]
   },
   {
@@ -275,7 +286,7 @@
     "## How do you want to withdraw from you and your spouse's accounts?\n",
     "By specifying an *auto* spousal split, the withdrawals from the retirement accounts will be made proportial to their respective balances. It can also be specified as a fractional value (e.g., 0.65) in which case 0.65 will be taken from the first account and the other 35% taken from the other (second entry) spouse.\n",
     "\n",
-    "All withdrawals use a smart banking approach which favors depleting taxable accounts before tax-deferred, before tax-free. With *auto*, additional checks and bounds are used to coordinate the accounts."
+    "All withdrawals use a smart banking approach which favors depleting taxable accounts before tax-deferred, before tax-free. With *auto*, additional checks and bounds are used to coordinate the spousal accounts."
    ]
   },
   {
@@ -311,7 +322,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5c0b00f1",
+   "id": "fb8f5600",
    "metadata": {},
    "source": [
     "# Analysis"
@@ -322,7 +333,7 @@
    "id": "0bfe0dbd",
    "metadata": {},
    "source": [
-    "## Show net income compared to target over the years"
+    "### Show net income compared to target over the years"
    ]
   },
   {
@@ -340,7 +351,7 @@
    "id": "460f5547",
    "metadata": {},
    "source": [
-    "## Show sources of income over the years"
+    "### Show sources of income over the years"
    ]
   },
   {
@@ -360,7 +371,7 @@
    "id": "8d997ff3",
    "metadata": {},
    "source": [
-    "## Show account balances at the beginning of each year"
+    "### Show account balances at the beginning of each year"
    ]
   },
   {
@@ -378,7 +389,7 @@
    "id": "1fad7e21",
    "metadata": {},
    "source": [
-    "## Show annual taxes paid over the years"
+    "### Show annual taxes paid over the years"
    ]
   },
   {
@@ -396,7 +407,7 @@
    "id": "8123cbc2",
    "metadata": {},
    "source": [
-    "## Show taxable annual income and anticipated tax brackets"
+    "### Show taxable annual income and anticipated tax brackets"
    ]
   },
   {
@@ -416,7 +427,7 @@
    "id": "2785e1c5",
    "metadata": {},
    "source": [
-    "## Show annual rates used for calculations"
+    "### Show annual rates used for calculations"
    ]
   },
   {
@@ -436,7 +447,8 @@
    "id": "96d1dd05",
    "metadata": {},
    "source": [
-    "## Do we save this plan?"
+    "## Do we save this plan?\n",
+    "The plan contains a lot of information on the distribution amounts, including the required minimum distribution that had to be performed under the given assuptions. This info can be saved in an excel workbook with one spreadsheet (tab) for Jack and one for Jill."
    ]
   },
   {
