A few bug fixes around single filers and histrates.

--- a/jack+jill.ipynb
+++ b/jack+jill.ipynb
@@ -35,10 +35,10 @@
    "outputs": [],
    "source": [
     "%matplotlib inline\n",
-    "# import retirement as rp\n",
+    "# import harp as rp\n",
     "\n",
     "import importlib\n",
-    "rp = importlib.import_module('retirement')\n",
+    "rp = importlib.import_module('harp')\n",
     "importlib.reload(rp)\n",
     "\n",
     "rp.setVerbose(True)"
@@ -265,7 +265,7 @@
     "\n",
     "The TAB name for each spreadsheet represents the name of the spouse for reporting transactions affecting your plan. So for Jack and Jill, this worksheet file would have two tabs, the first one named *Jack* and the second one named *Jill*, following the same order of data provided before.\n",
     "\n",
-    "An Jack and Jill provided their information in the file *timeHorizon.xlsx*."
+    "An Jack and Jill provided their information in the file *jack+jill.xlsx*."
    ]
   },
   {
@@ -275,7 +275,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plan.readContributions('timeHorizon.xlsx')"
+    "plan.readContributions('jack+jill.xlsx')"
    ]
   },
   {
