--- a/jack+jill.ipynb
+++ b/jack+jill.ipynb
@@ -16,7 +16,18 @@
    "source": [
     "This package is a laboratory for exploring the sensitivity of retirement financial decisions. It is not a planning tool, but more an environment to explore *what if* scenarios.\n",
     "\n",
+    "Copyright - Martin-D. Lacasse (2023)\n",
+    "\n",
     "Diclaimer: *You make your own decisions and I am not a financial planner. Use at your own risks.*"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1fbcbf9b",
+   "metadata": {},
+   "source": [
+    "## Introduction\n",
+    "This file is provided as a template to introduce you to HARP. For simulating your own plan, it is best to make a copy of this file and all those marked *jack+jill*. Then you can personalize the case with your numbers and start to experiment with HARP."
    ]
   },
   {
@@ -24,7 +35,8 @@
    "id": "4f1fd7ca",
    "metadata": {},
    "source": [
-    "### Just some Python module bookkeeping"
+    "### Just some Python module bookkeeping\n",
+    "These commands load the required module and set the program to display informational messages as it runs. It also makes sure that all graphs are displayed in the jupyter interface."
    ]
   },
   {
@@ -49,10 +61,10 @@
    "id": "d2d87b7e",
    "metadata": {},
    "source": [
-    "## Initialize our plan\n",
-    "Plan must start with providing the year of birth of each of the spouse(s) and their expected lifespan(s).\n",
+    "## Initialize your plan\n",
+    "Plan must start with providing the year of birth of each spouse(s) and their expected lifespan(s).\n",
     "\n",
-    "There are plenty of longivity predictors on the web. Pick your favorite:\n",
+    "For selecting your own numbers, there are plenty of longivity predictors on the web. Pick your favorite:\n",
     "\n",
     "https://www.livingto100.com/calculator\n",
     "\n",
@@ -84,7 +96,7 @@
     "- Tax-deferred accounts, including all IRAs, 401k, 403b, etc.\n",
     "- Tax-free accounts, including Roth IRAs and Roth 401k\n",
     "\n",
-    "For spouses, there are two values for each type of account, one for each spouse following the same order as before. For single individuals, only one value needs to be entered between each [ ].\n",
+    "For married couples, there are two values for each type of account, one for each spouse following the same order as before. For single individuals, only one value needs to be entered between each [ ].\n",
     "\n",
     "The beneficiary values specify the fraction of total of assets left to the other spouse at death. For example, a spouse leaving 3/4 of her fortune to her three children and the other part to her partner would have a beneficiary value of 0.25.\n",
     "\n",
@@ -137,7 +149,7 @@
     "                  taxDeferredAR=[[60, 40, 0, 0], [60, 40, 0, 0]],\n",
     "                  taxFreeAR=[[100, 0, 0, 0], [100, 0, 0, 0]])\n",
     "\n",
-    "plan.setFinalAR(taxableAR=[[0, 25, 50, 25], [0, 25, 50, 0]],\n",
+    "plan.setFinalAR(taxableAR=[[0, 25, 50, 25], [0, 25, 50, 25]],\n",
     "                taxDeferredAR=[[60, 40, 0, 0], [60, 40, 0, 0]],\n",
     "                taxFreeAR=[[60, 40, 0, 0], [60, 40, 0, 0]])\n",
     "\n",
@@ -157,17 +169,19 @@
     "Ranges chosen smaller that the life horizon will have rate values repeated in cycle. For example,\n",
     "choosing historical data from 1994 to 1996 will repeat these three values over the timespan of the plan.\n",
     "\n",
-    "Choosing a historical range of 1970 to 2022, will use the rates of 1970 for this year and 1971 for next, etc. Worst-case scenario is a retirement starting in 1966. It can be simulated as follows:\n",
+    "Choosing a historical range of 1970 to 2022, will use the rates of 1970 for this year and 1971 for next, etc. Worst-case scenarios are a retirement starting in 1966 or 1969. It can be simulated as follows:\n",
     "\n",
     "    plan.setRates('historical', 1966, 2022)\n",
-    "    \n",
-    "Stochastic data on the other hand computes the multivariate distributions for the 4 rates in a range selected. For example,\n",
+    "\n",
+    "In this case, year 2023 will have the same rates as those that happened in 1966, and 2024 will have those from 1967, and so on. This is given for instructional purposes only. No one should plan using the worst-case scenario.\n",
+    "\n",
+    "Stochastic data on the other hand, computes the multivariate distributions for the 4 rates in the selected range. For example,\n",
     "\n",
     "    plan.setRates('stochastic', 1945, 2022)\n",
     "    \n",
     "will analyze the data from 1945 to 2022 and compute means and covariance to generate statistically similar results. The stochastic rates generated for the timespan can be plotted as we will see below.\n",
     "    \n",
-    "One can also use fixed rates by providing a list of 4 entries as follows:\n",
+    "Finally one can also use fixed rates by providing a list of 4 entries as follows:\n",
     "\n",
     "    myrates = [9.6, 4.0, 3.0, 3.8]\n",
     "    plan.setRates(myrates)\n",
@@ -184,7 +198,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plan.setRates('historical', 1969, 2022)\n",
+    "plan.setRates('historical', 1966, 2022)\n",
     "# plan.setRates([8, 4, 4, 3])"
    ]
   },
@@ -194,9 +208,9 @@
    "metadata": {},
    "source": [
     "## What is your desired net income at retirement?\n",
-    "For determining this value, retirement planners will strongly suggest that you've must have done a cashflow analysis on your yearly spending. After this exercise, you should have a good idea of how much you'll need in retirement.\n",
+    "For determining this value, retirement planners will strongly suggest that you've must have done a cashflow analysis on your yearly spending. After this exercise, you should have a good idea of how much you'll need in retirement. You can also experiment with multiple scenarios and see what your savings can sustain.\n",
     "\n",
-    "The desired income here is the net income (i.e., after paying taxes) that you would like to have starting at your retirement age. This income is adjusted for inflation and can follow an additional adjustment called a *smile* profile. A *smile* profile accounts for the fact that your spending capacity will modulate during retirement as you go from the so-called gogo years to the no-go years. A *flat* profile, on the other hand, will keep the same value, which will only be inflation-adjusted.\n",
+    "The desired income here is the minimum net income (i.e., after paying taxes) that you would like to have starting at your \"retirement age\". We will define this term below. This income is adjusted for inflation and can follow an additional adjustment called a *smile* profile. A *smile* profile accounts for the fact that your spending capacity will modulate during retirement as you go from the so-called gogo years to the no-go years. A *flat* profile, on the other hand, will keep the same value, which will only be inflation-adjusted.\n",
     "\n",
     "The target and actual net income values achieved by the plan can be plotted as will see below."
    ]
@@ -217,7 +231,7 @@
    "id": "8dbdb068",
    "metadata": {},
    "source": [
-    "## You must also have some fixed income?\n",
+    "## You must also anticipate having some fixed income?\n",
     "Pension and social security are fixed income. Model here assumes that pension is not inflation adjusted while social security benefits are (but code can easily be modified to account for inflation-adjusted pensions). Entries are the predicted amount for each spouse and the age of the commencement of benefits.\n",
     "\n",
     "If you have no pension, just use zeros (0) as entries, as in\n",
@@ -258,14 +272,16 @@
     "\n",
     "Here, 20XX is the first year after both spouses have passed. For the columns, *anticipated income* is the annual amount (gross) that you anticipate to receive from employement or other sources (not including dividends from your taxable investment account). Note that column names are case sensitive and all of these entries must be in lower case.\n",
     "\n",
-    "Contributions to your savings accounts are marked as *ctrb*. Contributions to your 401k must also include your employer's contributions. Being in excel, you can use the calculator to enter percentage of your anticipated income if that is easier for you. \n",
+    "For the purpose of this planning, there is no clear definition of retirement age. There will be a year, however, from which you will stop having anticipated income, or diminished income due to decreasing your work load. \n",
+    "\n",
+    "Contributions to your savings accounts are marked as *ctrb*. Contributions to your 401k must also include your employer's contributions. As this file is in excel, you can use the calculator to enter percentage of your anticipated income if that is easier for you.\n",
     "Files format from the LibreOffice software can also be read.\n",
     "\n",
     "Roth conversion are specified in the column marked *Roth X*. Finally, *big ticket items* are the sale or purchase of a house, or any other major expense or money that you would give or receive (e.g., inheritance, or large gifts to or from you). Therefore, the sign (+/-) of entries in this column is important. All other column entries should be positive.\n",
     "\n",
-    "The TAB name for each spreadsheet represents the name of the spouse for reporting transactions affecting your plan. So for Jack and Jill, this worksheet file would have two tabs, the first one named *Jack* and the second one named *Jill*, following the same order of data provided before.\n",
+    "The tab name for each spreadsheet represents the name of the spouse for reporting yearly transactions affecting your plan. So for Jack and Jill, this worksheet file will have two tabs, the first one named *Jack* and the second one named *Jill*, following the same order of data provided before.\n",
     "\n",
-    "An Jack and Jill provided their information in the file *jack+jill.xlsx*."
+    "Jack and Jill provide their specific information in the file *jack+jill.xlsx*. Open this file in Excel and familiarize yourself with its contents."
    ]
   },
   {
@@ -333,7 +349,8 @@
    "id": "0bfe0dbd",
    "metadata": {},
    "source": [
-    "### Show net income compared to target over the years"
+    "### Show net income compared to target over the years\n",
+    "This graph shows how the actual net income generated by the plan matches the inflation-adjusted net income profile specified."
    ]
   },
   {
@@ -351,7 +368,8 @@
    "id": "460f5547",
    "metadata": {},
    "source": [
-    "### Show sources of income over the years"
+    "### Show sources of income over the years\n",
+    "Your income will be coming from mutiple sources, and it can be quite complex. This graphs shows the breakdown of Jack and Jill's sources of income by spouse and by origin. Note that distributions from tax-deferred accounts (*dist*) are distinguished from required minimum distributions (*rmd*) as they serve different purposes. Other labels should be self-expanatory."
    ]
   },
   {
@@ -371,7 +389,12 @@
    "id": "8d997ff3",
    "metadata": {},
    "source": [
-    "### Show account balances at the beginning of each year"
+    "### Show account balances at the beginning of each year\n",
+    "The balance for each account and each spouse is calculated at the beginning of each year. To get more information about the last year, one can use\n",
+    "\n",
+    "    plan.estate(30)\n",
+    "    \n",
+    "which returns the value of the estate, assuming (in this case) a 30\\% tax burden on the taxable portion of the estate (read tax-deferred accounts). Estate returns two values: the total value and the cumulative inflation rate between today and the last day of the plan."
    ]
   },
   {
@@ -385,11 +408,23 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "92951425",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "total, percent = plan.estate(30)\n",
+    "print(rp.d(total), rp.pc(percent))"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "1fad7e21",
    "metadata": {},
    "source": [
-    "### Show annual taxes paid over the years"
+    "### Show annual taxes paid over the years\n",
+    "This graph shows how much Jack and Jill paid in federal taxes over the years."
    ]
   },
   {
@@ -407,7 +442,10 @@
    "id": "8123cbc2",
    "metadata": {},
    "source": [
-    "### Show taxable annual income and anticipated tax brackets"
+    "### Show taxable annual income and anticipated tax brackets\n",
+    "Gross income also includes Roth conversions and big-ticket items that are not contributing to your net income. This graph shows Jack and Jill's gross taxable income and how it compare with some anticipated marginal tax brackets. This can be convenient if you want to perform ROth conversion and remain below a certain tax bracket.\n",
+    "\n",
+    "Note the shift in tax brakets taking place as the Tax Cuts and Job Act expires after 2025."
    ]
   },
   {
@@ -427,7 +465,8 @@
    "id": "2785e1c5",
    "metadata": {},
    "source": [
-    "### Show annual rates used for calculations"
+    "### Show annual rates used for calculations\n",
+    "As described above, there are many choices for selecting rates. This graph will display the annual rates used for the whole duration of the plan timespan."
    ]
   },
   {
@@ -460,6 +499,23 @@
    "source": [
     "# plan.savePlanXL('Jack and Jill')"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "149f52d5",
+   "metadata": {},
+   "source": [
+    "## Next level\n",
+    "Scripting Monte-Carlo simulations can be done by embedding the calls above in an iterative script. Such a script is included here. The script *jack+jill.py* contains two functions. In the first one, historical data is used to explore how the plan survives the test of historical rates from 1928 to the most recent past. The other function uses Monte-Carlo approach to generate ficticious rates derived from the statistical distribution of those observed in a selected time period."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "35f54907",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
