Remove 1969 in description

--- a/jack+jill.ipynb
+++ b/jack+jill.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1fbcbf9b",
+   "id": "355ed178",
    "metadata": {},
    "source": [
     "## Introduction\n",
@@ -169,11 +169,11 @@
     "Ranges chosen smaller that the life horizon will have rate values repeated in cycle. For example,\n",
     "choosing historical data from 1994 to 1996 will repeat these three values over the timespan of the plan.\n",
     "\n",
-    "Choosing a historical range of 1970 to 2022, will use the rates of 1970 for this year and 1971 for next, etc. Worst-case scenarios are a retirement starting in 1966 or 1969. It can be simulated as follows:\n",
+    "Choosing a historical range of 1970 to 2022, will use the rates of 1970 for this year and 1971 for next, etc. Due to its particular sequence of rates, the worst-case scenario is a retirement starting in 1966. It can be simulated as follows:\n",
     "\n",
     "    plan.setRates('historical', 1966, 2022)\n",
     "\n",
-    "In this case, year 2023 will have the same rates as those that happened in 1966, and 2024 will have those from 1967, and so on. This is given for instructional purposes only. No one should plan using the worst-case scenario.\n",
+    "In this case, year 2023 will have the same rates as those that happened in 1966, and 2024 will have those from 1967, and so on. This is given for instructional purposes only. No one should plan using the worst-case scenario. But is can be nformative to test your own plan.\n",
     "\n",
     "Stochastic data on the other hand, computes the multivariate distributions for the 4 rates in the selected range. For example,\n",
     "\n",
@@ -410,7 +410,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "92951425",
+   "id": "eedb9d78",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -502,7 +502,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "149f52d5",
+   "id": "07c1a065",
    "metadata": {},
    "source": [
     "## Next level\n",
@@ -512,7 +512,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "35f54907",
+   "id": "38c55252",
    "metadata": {},
    "outputs": [],
    "source": []
